...
            "state": "translated",
            "value": "Выравнивание"
          }
        }
      }
    },
    "All books": {
      "extractionState": "manual",
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Все книги"
...
            "state": "translated",
            "value": "Выбрать папку"
          }
        }
      }
    },
    "Choose what to show": {
      "extractionState": "manual",
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Выберите, что показывать"
...
            "state": "translated",
            "value": "Ничего не найдено"
          }
        }
      }
    },
    "Nothing here yet": {
      "extractionState": "manual",
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Пока пусто"
...
            "state": "translated",
            "value": "Предыдущее"
          }
        }
      }
    },
    "Profile": {
      "extractionState": "manual",
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Профиль"
...
            "state": "translated",
            "value": "Да, восстановить"
          }
        }
      }
    },
    "Yes, sign out": {
      "extractionState": "manual",
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Выйти"
...
